# ecom-forms

./: README.md  db.json  pyproject.toml  requirements.txt
app/: main.py  template.py  validator.py  web.py
app/db/: __init__.py  abc.py  tinydb.py
scripts/: populate.py  requests.py
tests/: mocks.py  test_db_tinydb.py  test_validator.py  test_web.py
