[tool.poetry]
name = "ecom"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tinydb = "^4.8.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
autoflake = "^2.2.1"
black = "^23.11.0"
mypy = "^1.7.1"
pytest = "^7.4.3"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
